# prospection-unijui

./: .env  .env.example  README.md  pyproject.toml
migrations/versions/: 256f8e17c829_.py
src/: __init__.py  config.py
src/api/: __init__.py  event_controller.py  formation_controller.py  interaction_controller.py  school_controller.py  student_controller.py
src/api/dtos/: __init__.py  course_dto.py  event_dto.py  formation_dto.py  interaction_dto.py  school_dto.py  student_dto.py
src/decorators/: __init__.py
src/models/: __init__.py  event.py  formation.py  interaction.py  school.py  student.py
src/services/: __init__.py  event_service.py  formation_service.py  interaction_service.py  school_service.py  student_service.py
src/utils/: service_utils.py
